# de-engineer-case-spond

./: .env.template  .gitignore  README.md  env.template  pyproject.toml  settings.py
spond_case/: logger.py
spond_case/dbt_spond_case/: .user.yml  dbt_project.yml  profiles.yml
spond_case/dbt_spond_case/models/: sources.yml
spond_case/dbt_spond_case/models/serve/: rbt_event_rsvps.sql  serve_schema.yml
spond_case/dbt_spond_case/models/staging/: staging_schema.yml  stg_event_rsvps.sql  stg_events.sql  stg_memberships.sql  stg_teams.sql
spond_case/ingestion/: migrate_postgres_to_redshift.py
spond_case/upload/: upload_to_postgres.py
