[tool.poetry]
name = "de-engineer-case-spond"
version = "0.1.0"
description = "Quick dev environment for the DE Engineering Case from Spond"
authors = ["Jean-Arnaud Ritouret"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pandas = "^2.2.2"
psycopg2 = "^2.9.10"
jupyter = "^1.0.0"
redshift-connector = "^2.1.7"
sqlalchemy = ">=1.4,<2.0"
sqlalchemy-redshift = "^0.8.14"
dbt-redshift = "^1.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
